fixed alignment of anthonyhinton.com in author profile

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -100,7 +100,7 @@ i {
   content: "\e900";
   color: #0092ca;
   margin-left: 0.1em;
-  margin-right: 0.1em;
+  margin-right: 0.15em;
 }
 
 .icon-ic-logo:before {
